// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LandingPage Should match existing snapshot when no props are provided. 1`] = `
<Container
  fluid={false}
>
  <Segment
    basic={true}
    padded="very"
  >
    <Grid
      centered={true}
      padded={true}
      relaxed={true}
    >
      <GridRow
        centered={false}
      >
        <GridColumn
          width={12}
        >
          <Header
            floated="left"
          >
            Featured Vignettes
          </Header>
          <Divider
            section={true}
          />
        </GridColumn>
      </GridRow>
      <GridRow
        centered={false}
      >
        <GridColumn
          width={12}
        >
          <Link
            style={
              Object {
                "color": "blue",
                "float": "right",
              }
            }
            to="vignettes"
          >
            more vignettes...
          </Link>
        </GridColumn>
      </GridRow>
      <GridRow
        centered={false}
      >
        <GridColumn
          width={12}
        >
          <Header
            floated="left"
          >
            Featured Visualizations
          </Header>
          <Divider
            section={true}
          />
        </GridColumn>
      </GridRow>
      <GridRow
        centered={false}
      >
        <GridColumn
          width={12}
        >
          <Link
            style={
              Object {
                "color": "blue",
                "float": "right",
              }
            }
            to="visualizations"
          >
            more visualizations...
          </Link>
        </GridColumn>
      </GridRow>
      <GridRow
        centered={true}
      >
        <GridColumn
          width={12}
        >
          <Header
            floated="left"
          >
            Featured Datasets
          </Header>
          <Divider
            section={true}
          />
        </GridColumn>
      </GridRow>
      <GridRow
        columns={2}
        divided={true}
      >
        <GridColumn
          width={3}
        >
          <GridRow>
            <img
              alt="human cell atlas logo"
              src="assets/icons/hca-logo.png"
              style={
                Object {
                  "height": "250px",
                  "width": "150px",
                }
              }
            />
            <GridRow>
              <a
                href="https://preview.data.humancellatlas.org/"
              >
                Search HCA datasets ...
              </a>
            </GridRow>
          </GridRow>
        </GridColumn>
        <GridColumn
          stretched={true}
          textAlign="left"
          width={8}
        >
          <GridRow
            textAlign="center"
          >
            <Header
              as="h2"
              textAlign="center"
            >
              User shared
            </Header>
          </GridRow>
          <br />
          <GridRow
            textAlign="center"
          >
            <Header
              as="h3"
              textAlign="center"
            >
              Coming soon!
            </Header>
          </GridRow>
        </GridColumn>
      </GridRow>
    </Grid>
  </Segment>
</Container>
`;

exports[`LandingPage Should render featured vignettes correctly. 1`] = `
<Container
  fluid={false}
>
  <Segment
    basic={true}
    padded="very"
  >
    <Grid
      centered={true}
      padded={true}
      relaxed={true}
    >
      <GridRow
        centered={false}
      >
        <GridColumn
          width={12}
        >
          <Header
            floated="left"
          >
            Featured Vignettes
          </Header>
          <Divider
            section={true}
          />
        </GridColumn>
      </GridRow>
      <GridRow
        columns={3}
      >
        <GridColumn
          width={2}
        >
          <img
            alt="vignettes Someday icon"
            src="undefinedsome-icon"
            style={
              Object {
                "height": "90px",
                "width": "90px",
              }
            }
          />
        </GridColumn>
        <GridColumn
          textAlign="left"
          width={8}
        >
          <Header>
            Someday
          </Header>
          <p>
            <span
              style={
                Object {
                  "fontWeight": "bold",
                }
              }
            >
              Description: 
            </span>
            A song
          </p>
          <p>
            <span
              style={
                Object {
                  "fontWeight": "bold",
                }
              }
            >
              Analysis authors: 
            </span>
            The Strokes
          </p>
          <br />
        </GridColumn>
        <GridColumn
          width={2}
        >
          <Button
            as="button"
            basic={true}
          >
            <Link
              to="/dynamics?id=some-dataset&viz=some-viz"
            >
              launch
            </Link>
          </Button>
        </GridColumn>
      </GridRow>
      <GridRow
        columns={3}
      >
        <GridColumn
          width={2}
        >
          <img
            alt="vignettes Stan icon"
            src="undefinedsome-icon-2"
            style={
              Object {
                "height": "90px",
                "width": "90px",
              }
            }
          />
        </GridColumn>
        <GridColumn
          textAlign="left"
          width={8}
        >
          <Header>
            Stan
          </Header>
          <p>
            <span
              style={
                Object {
                  "fontWeight": "bold",
                }
              }
            >
              Description: 
            </span>
            Dear Slim...
          </p>
          <p>
            <span
              style={
                Object {
                  "fontWeight": "bold",
                }
              }
            >
              Analysis authors: 
            </span>
            Eminem and Dido
          </p>
          <br />
        </GridColumn>
        <GridColumn
          width={2}
        >
          <Button
            as="button"
            basic={true}
          >
            <Link
              to="/dynamics?id=some-dataset-2&viz=some-viz-2"
            >
              launch
            </Link>
          </Button>
        </GridColumn>
      </GridRow>
      <GridRow
        centered={false}
      >
        <GridColumn
          width={12}
        >
          <Link
            style={
              Object {
                "color": "blue",
                "float": "right",
              }
            }
            to="vignettes"
          >
            more vignettes...
          </Link>
        </GridColumn>
      </GridRow>
      <GridRow
        centered={false}
      >
        <GridColumn
          width={12}
        >
          <Header
            floated="left"
          >
            Featured Visualizations
          </Header>
          <Divider
            section={true}
          />
        </GridColumn>
      </GridRow>
      <GridRow
        centered={false}
      >
        <GridColumn
          width={12}
        >
          <Link
            style={
              Object {
                "color": "blue",
                "float": "right",
              }
            }
            to="visualizations"
          >
            more visualizations...
          </Link>
        </GridColumn>
      </GridRow>
      <GridRow
        centered={true}
      >
        <GridColumn
          width={12}
        >
          <Header
            floated="left"
          >
            Featured Datasets
          </Header>
          <Divider
            section={true}
          />
        </GridColumn>
      </GridRow>
      <GridRow
        columns={2}
        divided={true}
      >
        <GridColumn
          width={3}
        >
          <GridRow>
            <img
              alt="human cell atlas logo"
              src="assets/icons/hca-logo.png"
              style={
                Object {
                  "height": "250px",
                  "width": "150px",
                }
              }
            />
            <GridRow>
              <a
                href="https://preview.data.humancellatlas.org/"
              >
                Search HCA datasets ...
              </a>
            </GridRow>
          </GridRow>
        </GridColumn>
        <GridColumn
          stretched={true}
          textAlign="left"
          width={8}
        >
          <GridRow
            textAlign="center"
          >
            <Header
              as="h2"
              textAlign="center"
            >
              User shared
            </Header>
          </GridRow>
          <br />
          <GridRow
            textAlign="center"
          >
            <Header
              as="h3"
              textAlign="center"
            >
              Coming soon!
            </Header>
          </GridRow>
        </GridColumn>
      </GridRow>
    </Grid>
  </Segment>
</Container>
`;

exports[`LandingPage Should render featured visualizations correctly. 1`] = `
<Container
  fluid={false}
>
  <Segment
    basic={true}
    padded="very"
  >
    <Grid
      centered={true}
      padded={true}
      relaxed={true}
    >
      <GridRow
        centered={false}
      >
        <GridColumn
          width={12}
        >
          <Header
            floated="left"
          >
            Featured Vignettes
          </Header>
          <Divider
            section={true}
          />
        </GridColumn>
      </GridRow>
      <GridRow
        centered={false}
      >
        <GridColumn
          width={12}
        >
          <Link
            style={
              Object {
                "color": "blue",
                "float": "right",
              }
            }
            to="vignettes"
          >
            more vignettes...
          </Link>
        </GridColumn>
      </GridRow>
      <GridRow
        centered={false}
      >
        <GridColumn
          width={12}
        >
          <Header
            floated="left"
          >
            Featured Visualizations
          </Header>
          <Divider
            section={true}
          />
        </GridColumn>
      </GridRow>
      <GridRow
        columns={3}
      >
        <GridColumn
          width={2}
        >
          <img
            alt="viz Hit That icon"
            src="undefinedundefined"
            style={
              Object {
                "height": "90px",
                "width": "90px",
              }
            }
          />
        </GridColumn>
        <GridColumn
          textAlign="left"
          width={8}
        >
          <Header>
            Hit That
          </Header>
          A song
          <p>
            <span
              style={
                Object {
                  "fontWeight": "bold",
                }
              }
            >
              Original authors
              : 
            </span>
            The Offspring
          </p>
          <br />
        </GridColumn>
        <GridColumn
          width={2}
        >
          <GridRow>
            <Button
              as="button"
              basic={true}
            >
              <Link
                to={
                  Object {
                    "pathname": "/visualizations/",
                    "search": "?id=some-viz-1",
                  }
                }
              >
                details
              </Link>
            </Button>
          </GridRow>
          <GridRow>
            <Button
              as="button"
              basic={true}
            >
              <Link
                to={
                  Object {
                    "pathname": "/dynamics",
                    "search": "?id=some-dataset&viz=some-viz-1",
                  }
                }
              >
                launch
              </Link>
            </Button>
          </GridRow>
        </GridColumn>
      </GridRow>
      <GridRow
        columns={3}
      >
        <GridColumn
          width={2}
        >
          <img
            alt="viz Under Pressure icon"
            src="undefinedundefined"
            style={
              Object {
                "height": "90px",
                "width": "90px",
              }
            }
          />
        </GridColumn>
        <GridColumn
          textAlign="left"
          width={8}
        >
          <Header>
            Under Pressure
          </Header>
          A song
          <p>
            <span
              style={
                Object {
                  "fontWeight": "bold",
                }
              }
            >
              Authors
              : 
            </span>
            Queen and David Bowie
          </p>
          <br />
        </GridColumn>
        <GridColumn
          width={2}
        >
          <GridRow>
            <Button
              as="button"
              basic={true}
            >
              <Link
                to={
                  Object {
                    "pathname": "/visualizations/",
                    "search": "?id=some-viz-2",
                  }
                }
              >
                details
              </Link>
            </Button>
          </GridRow>
          <GridRow>
            <Button
              as="button"
              basic={true}
            >
              <Link
                to={
                  Object {
                    "pathname": "/dynamics",
                    "search": "?id=some-dataset-2&viz=some-viz-2",
                  }
                }
              >
                launch
              </Link>
            </Button>
          </GridRow>
        </GridColumn>
      </GridRow>
      <GridRow
        centered={false}
      >
        <GridColumn
          width={12}
        >
          <Link
            style={
              Object {
                "color": "blue",
                "float": "right",
              }
            }
            to="visualizations"
          >
            more visualizations...
          </Link>
        </GridColumn>
      </GridRow>
      <GridRow
        centered={true}
      >
        <GridColumn
          width={12}
        >
          <Header
            floated="left"
          >
            Featured Datasets
          </Header>
          <Divider
            section={true}
          />
        </GridColumn>
      </GridRow>
      <GridRow
        columns={2}
        divided={true}
      >
        <GridColumn
          width={3}
        >
          <GridRow>
            <img
              alt="human cell atlas logo"
              src="assets/icons/hca-logo.png"
              style={
                Object {
                  "height": "250px",
                  "width": "150px",
                }
              }
            />
            <GridRow>
              <a
                href="https://preview.data.humancellatlas.org/"
              >
                Search HCA datasets ...
              </a>
            </GridRow>
          </GridRow>
        </GridColumn>
        <GridColumn
          stretched={true}
          textAlign="left"
          width={8}
        >
          <GridRow
            textAlign="center"
          >
            <Header
              as="h2"
              textAlign="center"
            >
              User shared
            </Header>
          </GridRow>
          <br />
          <GridRow
            textAlign="center"
          >
            <Header
              as="h3"
              textAlign="center"
            >
              Coming soon!
            </Header>
          </GridRow>
        </GridColumn>
      </GridRow>
    </Grid>
  </Segment>
</Container>
`;
